---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-06-21
  Changes:
    - Fix circuit connector location (shoutout to Quezler's circuit connector placement helper mod)
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-05-11
  Changes:
    - Fix compatibility code to not cause load error if an object is missing
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-05-11
  Bugfixes:
    - Fix module slot setting not applying correctly
---------------------------------------------------------------------------------------------------
Version: 2.0.0
  Bugfixes:
    - Update mod to Factorio 2.0.7