@@ -2,6 +2,7 @@
 Version: 2.0.4
 Date: ????
   Changes:
+    - Fix status light position and other working visualisations when applied by other mods
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2025-06-21
